--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
   homepage_db:
     image: mysql:5.7
     volumes:
-      - ${PWD}/../volumes/mysql_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
     ports:
       - "127.0.0.1:1120:3306"
     environment:
@@ -57,3 +57,6 @@ services:
       - "/root/show/:/show"
     restart: always
     container_name: "nginx"
+
+volumes:
+  mysql_data:
